ajout du caroussel + première version page d'accueil

--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -10,4 +10,12 @@ p {
 img {
   width: 70px;
   border-radius: 95px;
+  vertical-align: bottom; /*enlever l'espace en dessous de l'image*/
 }
+
+mat-icon {
+  color: white;
+  right: 90%;
+  vertical-align: bottom;
+}
+
