--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -3,5 +3,10 @@
   <img [src]= "imageLogo" alt="titleLogo" >
   <p> {{titleHeader}} </p>
 
+  <div>
+    <mat-icon class="forum">forum</mat-icon>
+    <mat-icon class="pdp">person</mat-icon>
+  </div>
+
 </mat-toolbar>
 
