--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<mat-toolbar>
+
+  <p class="text"> {{presentationFooter}}
+  <a href="{{liens}}" > ici !</a>
+  </p>
+
+</mat-toolbar>
