avancement accueil + recherche
création folders pour les pages et pour les components ; copier coller des informations d'accueil dans le component recommandation.
Dans le component recherche-form: création du formulaire pour la recherche de maison.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,15 @@
+<!--<body>
 <app-header></app-header>
-
-<app-accueil></app-accueil>
+<main>
+  <router-outlet></router-outlet>
+</main>
 
 <app-footer></app-footer>
+</body>-->
+
+<app-recommandations></app-recommandations>
+
+
+
+
+
