Mise dans les dossier les bons components
Déplacement et suppression des components qui n'étaient pas à leur place + création component page not found et mis dans le dossier des pages

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,11 +1,11 @@
-<!--<body>
+<<body>
 <app-header></app-header>
 <main>
   <router-outlet></router-outlet>
 </main>
 
 <app-footer></app-footer>
-</body>-->
+</body>
 
 <app-recommandations></app-recommandations>
 
