avancée recherche-list
mise des filtres et des dispositions des maisons / descriptions du component recherche-list

--- a/frontend/src/app/components/recherche-form/recherche-form.component.html
+++ b/frontend/src/app/components/recherche-form/recherche-form.component.html
@@ -1,11 +1,17 @@
 
+<body>
+
+<div class="rectangle" >
 <form method="post" action="mailto:votreemail@email.com">.
 
-  Town: <input type="text" size="10" maxlength="40" name="name" /><br />
-  Date: <input type="range" size="10" maxlength="10" date="date" /><br />
-  Room: <input type="int" size="10" maxlength="10" room="room" /><br />
-  Category: <input type="text" size="10" maxlength="10" category="category" /><br />
+  Town: <input type="text" size="10" name="name" /><br />
+  Date: <input type="range" size="10" maxlength="8" date="date" /><br />
+  Room: <input type="int" size="10" room="room" /><br />
+  Category: <input type="text" size="10" category="category" /><br />
 
   <input type="submit" value="Search" />
 
 </form>
+</div>
+
+</body>
