--- a/frontend/src/app/components/recherche-list/recherche-list.component.html
+++ b/frontend/src/app/components/recherche-list/recherche-list.component.html
@@ -1,1 +1,43 @@
-<p>recherche-list works!</p>
+
+<body>
+
+<!-- afficher les filtres dans des ovales -->
+<br/>
+<div class="ovale">
+   {{filtre1}}
+</div>
+
+<div class="ovale">
+  {{filtre2}}
+</div>
+
+<div class="ovale">
+  {{filtre3}}
+</div>
+
+<div class="ovale">
+  {{filtre4}}
+</div>
+
+<br/>
+<br/>
+<!-- résultat d'une maison -->
+  <img src="https://www.monconseillerimmo.com/wp-content/uploads/paris-appart.jpg">
+  <div class="rectangle">
+    <p> {{descriptionM1}} </p>
+  </div>
+  <br/>
+
+  <img src="https://a0.muscache.com/pictures/36728b8e-dd63-4f26-818c-3769bc4ea0e8.jpg">
+  <div class="rectangle">
+    <p> {{descriptionM2}} </p>
+  </div>
+  <br/>
+
+  <img src="https://resofrance.eu/wp-content/uploads/2016/04/chambre-hotel-design.jpg">
+  <div class="rectangle">
+    <p> {{descriptionM3}} </p>
+  </div>
+  <br/>
+
+</body>
