start front for user and login

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<<body>
+<body>
 <app-header></app-header>
 <main>
   <router-outlet></router-outlet>
@@ -7,7 +7,6 @@
 <app-footer></app-footer>
 </body>
 
-<app-recommandations></app-recommandations>
 
 
 
