--- a/frontend/src/app/components/recherche-form/recherche-form.component.css
+++ b/frontend/src/app/components/recherche-form/recherche-form.component.css
@@ -1,12 +1,8 @@
-
-.rectangle {
-  width: 50%;
-  background-color: #393939;
-  margin: auto;
-}
-
-form {
-  font-size: 150%;
-  color: white;
+mat-card{
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  display : flex;
+  margin-top:10px;
 }
 
