--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,12 +1,14 @@
 <mat-toolbar>
-
-  <img [src]= "imageLogo" alt="titleLogo" >
-  <p> {{titleHeader}} </p>
-
-  <div>
-    <mat-icon class="forum">forum</mat-icon>
-    <mat-icon class="pdp">person</mat-icon>
-  </div>
-
+  <button mat-icon-button class="example-icon" (click)="toHome()">
+    <mat-icon>home</mat-icon>
+  </button>
+  <span>{{titleHeader}}</span>
+  <span class="example-spacer"></span>
+  <button mat-icon-button class="example-icon favorite-icon forum" aria-label="Example icon-button with heart icon" (click)="toForum()">
+    <mat-icon>forum</mat-icon>
+  </button>
+  <button mat-icon-button class="example-icon pdp" aria-label="Example icon-button with share icon" (click)="toProfil()">
+    <mat-icon>person</mat-icon>
+  </button>
 </mat-toolbar>
 
