--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -1,14 +1,14 @@
 <mat-card >
   <mat-card-header>
-    <mat-card-title>Connexion</mat-card-title>
+    <mat-card-title>Login</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <form class="example-form" #loginForm="ngForm" (ngSubmit)="login(loginForm)">
 <table>
   <tr>
       <mat-form-field appearance="fill" class="example-full-width">
-        <mat-label>Nom d'utilisateur</mat-label>
-        <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
+        <mat-label>Username</mat-label>
+        <input matInput [(ngModel)]="username" name="username" required>
       </mat-form-field>
   </tr>  <tr>
 
@@ -23,7 +23,7 @@
 
 </table>
       <mat-card-actions>
-        <button mat-raised-button type="submit" color="primary">Connexion</button>
+        <button mat-raised-button type="submit" color="primary">Login</button>
       </mat-card-actions>
     </form>
   </mat-card-content>
