--- a/frontend/src/app/components/profil/profil.component.css
+++ b/frontend/src/app/components/profil/profil.component.css
@@ -1,16 +1,20 @@
-.intro {
-  display: inline;
+.intro p{
+  text-align: center;
 }
 
 .intro img {
-  margin-left: 40%;
-  margin-top: 20%;
-  width: 15%;
-  height: 15%;
+  width: 10%;
+  height: 10%;
+  display: block;
+  margin: 0% auto;
 }
 
-.intro p {
-
+img {
+  margin: 5%;
+  margin-left: 18%;
+  width: 25%;
+  height: 20%;
+  display: inline;
 }
 
 .expositionPhoto {
