--- a/frontend/src/app/components/affichage-maison/affichage-maison.component.html
+++ b/frontend/src/app/components/affichage-maison/affichage-maison.component.html
@@ -13,7 +13,8 @@
 </div>
 
 <div class="recapLgmt">
-  <p>&#10145;  {{recapLgmt}} </p>
+  <p class="titre">&#10145;  {{recapLgmt}} </p>
+  <p class="description">{{description}}</p>
 </div>
 
 <div class="condition">
@@ -28,10 +29,11 @@
   <p>&#10006; {{limite3}}</p>
 </div>
 
-<br/> <br/>
+
 <div class="recapComm">
   <p> {{recapComm}} <button> RESERVE </button> </p>
 
 </div>
+<br> <br>
 
 </body>
