--- a/frontend/src/app/components/recherche-list/recherche-list.component.html
+++ b/frontend/src/app/components/recherche-list/recherche-list.component.html
@@ -22,7 +22,9 @@
 <br/>
 <br/>
 <!-- résultat d'une maison -->
+<a href="/visualhouse">
   <img src="https://www.monconseillerimmo.com/wp-content/uploads/paris-appart.jpg">
+</a>
   <div class="rectangle">
     <p> {{descriptionM1}} </p>
   </div>
