--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -7,8 +7,10 @@
   <button mat-icon-button class="example-icon favorite-icon forum" aria-label="Example icon-button with heart icon" (click)="toForum()">
     <mat-icon>forum</mat-icon>
   </button>
+  <a href="/profile">
   <button mat-icon-button class="example-icon pdp" aria-label="Example icon-button with share icon" (click)="toProfil()">
     <mat-icon>person</mat-icon>
   </button>
+  </a>
 </mat-toolbar>
 
