--- a/frontend/src/app/pages/recherche/recherche.component.html
+++ b/frontend/src/app/pages/recherche/recherche.component.html
@@ -1,6 +1,13 @@
 <body>
 
-<app-recherche-form></app-recherche-form>
-<app-recherche-list></app-recherche-list>
+<app-recherche-form (dataEvent)="receiveData($event)"></app-recherche-form>
+
+<button (click)="console()">Click</button>
+
+{{data}}
+
+<app-house-card></app-house-card>
+
+<!-- <app-recherche-list></app-recherche-list> -->
 
 </body>
