--- a/frontend/src/app/components/affichage-maison/affichage-maison.component.html
+++ b/frontend/src/app/components/affichage-maison/affichage-maison.component.html
@@ -1,39 +1,44 @@
-<body>
+<mat-card class="main-card">
+  <mat-card-header>
+    <mat-card-title>{{house.adress}}, {{house.city}} - {{note}}/5
+      <mat-icon>grade</mat-icon>
+    </mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div class="images">
+      <img src={{photo1}} title="maisonExt">
+      <img src={{photo2}} title="maisonInt">
+      <img src={{photo3}} title="chambre">
+      <img src={{photo4}} title="cuisine">
+    </div>
+    <mat-card>
+      <mat-card-title>
+        <mat-icon>trending_flat</mat-icon>
+        {{house.type}} in {{house.city}} - {{house.bedrooms}} bedrooms
+      </mat-card-title>
+      <mat-card-content>{{house.description}}</mat-card-content>
+    </mat-card>
 
-<div class="intro">
-<p> {{titreMaison}} - {{note}}&#11088;/5 - {{adresse}}</p>
+    <table>
+      <th>
+        <mat-card class="condition" *ngIf="conditions.length!=0">
+          <mat-card-content *ngFor="let condition of conditions">
+            <mat-icon>done</mat-icon>
+            {{condition.name}}
+          </mat-card-content>
+        </mat-card>
+      </th>
+      <th>
+        <mat-card class="limite" *ngIf="limites.length!=0">
+          <mat-card-content *ngFor="let limite of limites">
+            <mat-icon>clear</mat-icon>
+            {{limite.name}}
+          </mat-card-content>
+        </mat-card>
+      </th>
+    </table>
+    <button mat-raised-button type="button">RESERVER</button>
+  </mat-card-content>
 
-</div>
+</mat-card>
 
-<div class="images">
-  <img src={{photo1}} title="maisonExt">
-  <img src={{photo2}} title="maisonInt">
-  <img src={{photo3}} title="chambre">
-  <img src={{photo4}} title="cuisine">
-</div>
-
-<div class="recapLgmt">
-  <p class="titre">&#10145;  {{recapLgmt}} </p>
-  <p class="description">{{description}}</p>
-</div>
-
-<div class="condition">
-  <p>&#10004; {{condition1}}</p>
-  <p>&#10004; {{condition2}}</p>
-  <p>&#10004; {{condition3}}</p>
-</div>
-
-<div class="limite">
-  <p>&#10006; {{limite1}}</p>
-  <p>&#10006; {{limite2}}</p>
-  <p>&#10006; {{limite3}}</p>
-</div>
-
-
-<div class="recapComm">
-  <p> {{recapComm}} <button> RESERVE </button> </p>
-
-</div>
-<br> <br>
-
-</body>
