--- a/frontend/src/app/components/recommandations/recommandations.component.html
+++ b/frontend/src/app/components/recommandations/recommandations.component.html
@@ -2,6 +2,7 @@
 
 <!-- Caroussels des maisons et des destinations -->
 
+<!--
 <p>{{presentation1}}</p>
 <carousel>
   <div class="carousel-cell">
@@ -18,6 +19,26 @@
   </div>
 </carousel>
 
+<p>{{presentation1}}</p>
+
+<div class="carousel-item">
+<carousel>
+  <div class="carousel-container">
+    <img class="carousel-cell" src="https://meet-thelocals.com/wp-content/uploads/2019/10/Eiffel-Tower-view-Paris.jpg" alt="Paris">
+  </div>
+  <div class="carousel-container">
+    <img class="carousel-cell" src="https://galeriemagazine.com/wp-content/uploads/2018/05/Port-de-Marseille_webcover.jpg" alt="Marseille">
+  </div>
+  <div class="carousel-container">
+    <img class="carousel-cell" src="https://assets.vogue.com/photos/5995ef90d50bdd172aa1b516/master/w_2560%2Cc_limit/00-lede-lyon-france-travel-guide.jpg" alt="Lyon">
+  </div>
+  <div class="carousel-container">
+    <img class="carousel-cell" src="https://d1bvpoagx8hqbg.cloudfront.net/originals/erasmus-experience-aix-en-provence-france-nadine-f8d12e38f8cf7d62bd248adffd04148c.jpg" alt="Aix">
+  </div>
+</carousel>
+</div>
+
+
 <p> {{presentation2}} </p>
 <carousel>
   <div class="carousel-cell">
@@ -33,3 +54,66 @@
     <img src="https://evasion-online.com/images/2016/07/csm_slide3_6a822d9089-1050x525.jpg" alt="maison4">
   </div>
 </carousel>
+
+-->
+
+<body>
+
+<!-- Containeur 1 sur les différentes destinations -->
+<div class="container">
+  <h1 class="main-heading">{{presentation1}}</h1>
+    </div>
+
+    <div class="slideshow">
+      <!-- carousel control buttons -->
+      <button class="slide-btn slide-btn-1"></button>
+      <button class="slide-btn slide-btn-2"></button>
+      <button class="slide-btn slide-btn-3"></button>
+      <button class="slide-btn slide-btn-4"></button>
+      <!-- carousel wrapper which contains all images -->
+      <div class="slideshow-wrapper">
+        <div class="slide">
+          <img class="slide-img" src= "https://meet-thelocals.com/wp-content/uploads/2019/10/Eiffel-Tower-view-Paris.jpg">
+        </div>
+        <div class="slide">
+          <img class="slide-img" src= "https://galeriemagazine.com/wp-content/uploads/2018/05/Port-de-Marseille_webcover.jpg">
+        </div>
+        <div class="slide">
+          <img class="slide-img" src= "https://assets.vogue.com/photos/5995ef90d50bdd172aa1b516/master/w_2560%2Cc_limit/00-lede-lyon-france-travel-guide.jpg">
+        </div>
+        <div class="slide">
+          <img class="slide-img" src="https://d1bvpoagx8hqbg.cloudfront.net/originals/erasmus-experience-aix-en-provence-france-nadine-f8d12e38f8cf7d62bd248adffd04148c.jpg">
+        </div>
+      </div>
+</div>
+
+<!-- Containeur 2 sur les différentes maisons -->
+<div class="container">
+  <h1 class="main-heading">{{presentation2}}</h1>
+</div>
+
+<div class="slideshow">
+  <!-- carousel control buttons -->
+  <button class="slide-btn slide-btn-1"></button>
+  <button class="slide-btn slide-btn-2"></button>
+  <button class="slide-btn slide-btn-3"></button>
+  <button class="slide-btn slide-btn-4"></button>
+  <!-- carousel wrapper which contains all images -->
+  <div class="slideshow-wrapper">
+    <div class="slide">
+      <img class="slide-img" src= "https://manager.groupe-bdl.com/web_content/modeles/125-modele-maison-individuelle-a-etage-1.jpg">
+    </div>
+    <div class="slide">
+      <img class="slide-img"  src= "https://www.constructeur-maison-laure.fr/sites/default/files/styles/vignette_5/public/2019-06/maison-primo-accedant-2-maison-laure.jpg">
+    </div>
+    <div class="slide">
+      <img class="slide-img" src= "http://www.snut.fr/wp-content/uploads/2015/07/image-de-maison.png">
+    </div>
+    <div class="slide">
+      <img class="slide-img" src="https://evasion-online.com/images/2016/07/csm_slide3_6a822d9089-1050x525.jpg">
+    </div>
+  </div>
+</div>
+
+<br> <br>
+</body>
