--- a/frontend/src/app/components/reservation/reservation.component.html
+++ b/frontend/src/app/components/reservation/reservation.component.html
@@ -1,1 +1,10 @@
-<p>reservation works!</p>
+<form>
+    <mat-form-field>
+        <mat-label>Enter the beginning and end of your reservation</mat-label>
+        <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+            <input matStartDate formControlName="date_start" placeholder="Start date">
+            <input matEndDate formControlName="date_end" placeholder="End date">
+        </mat-date-range-input>
+    </mat-form-field>
+    <button mat-raised-button onclick="postReservation">Submit</button>
+</form>
