--- a/frontend/src/app/pages/page-not-found/page-not-found.component.html
+++ b/frontend/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,3 +1,4 @@
 <body>
 <p> {{notFound}} </p>
 </body>
+<img src="https://media.istockphoto.com/vectors/abandoned-house-spooky-place-dilapidated-building-error-404-page-not-vector-id816802498?k=20&m=816802498&s=170667a&w=0&h=mlsU4UYqxRrWiEomEMZYKsjOsD8_0sKnWDW3bROe6fM=" alt="Italian Trulli">
