Pb de page not found réglé

--- a/frontend/src/app/components/profil/profil.component.html
+++ b/frontend/src/app/components/profil/profil.component.html
@@ -16,6 +16,11 @@
   <img src={{photoM3}} alt="photoM3" >
   <img src={{photoM4}} alt="photoM4" >
   </a>
+
+  <div clas="button">
+    <button mat-flat-button color="accent">Send a message</button>
+    <button mat-flat-button color="accent">Leave a review</button>
+  </div>
 </div>
 
 </body>
