--- a/frontend/src/app/components/profil/profil.component.css
+++ b/frontend/src/app/components/profil/profil.component.css
@@ -22,3 +22,12 @@ img {
 .expositionPhoto {
 
 }
+
+button {
+  height: 20%;
+  width: 15%;
+  margin-left: 45%;
+
+  margin-top: 2px;
+  font-size: 100%;
+}
