--- a/frontend/src/app/pages/page-not-found/page-not-found.component.css
+++ b/frontend/src/app/pages/page-not-found/page-not-found.component.css
@@ -1,7 +1,8 @@
 p {
   text-align: center;
+  width: 100%;
   color: #393939;
   font-family: Roboto, Helvetica, sans-serif;
   font-size: 50px;
-  margin-top: 50%;
+  margin-top: 50px;
 }
