modify front login log out sign in

--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -27,5 +27,6 @@
       </mat-card-actions>
     </form>
   </mat-card-content>
+  <mat-card-footer><a mat-button color="primary" [routerLink]="['/inscription']">No account ?</a></mat-card-footer>
 </mat-card>
 
