--- a/frontend/src/app/components/user-form/user-form.component.html
+++ b/frontend/src/app/components/user-form/user-form.component.html
@@ -50,5 +50,6 @@
       </mat-card-actions>
     </form>
   </mat-card-content>
+  <mat-card-footer><a mat-button color="primary" [routerLink]="['/login']">Already have a account ?</a></mat-card-footer>
 </mat-card>
 
