--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,7 +1,9 @@
+<div class="empty"> </div>
+
 <mat-toolbar>
 
   <p class="text"> {{presentationFooter}}
-  <a href="{{liens}}" > ici !</a>
+  <a href="{{liens}}" > here !</a>
   </p>
 
 </mat-toolbar>
