--- a/frontend/src/app/pages/page-not-found/page-not-found.component.css
+++ b/frontend/src/app/pages/page-not-found/page-not-found.component.css
@@ -3,5 +3,5 @@ p {
   color: #393939;
   font-family: Roboto, Helvetica, sans-serif;
   font-size: 50px;
-  margin-top: 50%;
+  margin-top: 50px;
 }
