--- a/frontend/src/app/components/logout/logout.component.html
+++ b/frontend/src/app/components/logout/logout.component.html
@@ -1,4 +1,4 @@
 <mat-card>
   <mat-card-header><mat-card-title>Thanks for your visit !</mat-card-title></mat-card-header>
-  <mat-card-content>You are log out</mat-card-content>
+  <mat-card-content>You are logged out</mat-card-content>
 </mat-card>
