--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -23,7 +23,7 @@
     </button>
     <button mat-menu-item (click)="toAddhouse()">
       <mat-icon>add</mat-icon>
-      <span>Add house</span>
+      <span>Add houses</span>
     </button>
     <button mat-menu-item (click)="toReservation()">
       <mat-icon>event</mat-icon>
