--- a/frontend/src/app/components/user/user.component.html
+++ b/frontend/src/app/components/user/user.component.html
@@ -1,3 +1,41 @@
-<p>user works!</p>
+<mat-card>
+  <mat-card-header><mat-card-title>List of Users</mat-card-title></mat-card-header>
+  <mat-card-content>
+    <table mat-table [dataSource]="users" class="mat-elevation-z8">
+      <ng-container matColumnDef="username">
+        <th mat-header-cell *matHeaderCellDef> Username </th>
+        <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+      </ng-container>
+      <ng-container matColumnDef="firstname">
+        <th mat-header-cell *matHeaderCellDef> First Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
+      </ng-container>
 
-<p>{{user}}</p>
+      <ng-container matColumnDef="lastname">
+        <th mat-header-cell *matHeaderCellDef> Last Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="emailadress">
+        <th mat-header-cell *matHeaderCellDef> Email </th>
+        <td mat-cell *matCellDef="let element"> {{element.emailadress}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="role">
+        <th mat-header-cell *matHeaderCellDef> Role </th>
+        <td mat-cell *matCellDef="let element"> {{element.role}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef=" ">
+        <th mat-header-cell *matHeaderCellDef> <button mat-raised-button class="add-button" (click)="toAdd()">
+          <mat-icon>add</mat-icon>Add Admin
+        </button></th>
+        <td mat-cell *matCellDef="let element"> <button mat-icon-button (click)="deleteUser(element.iduser)"><mat-icon color="primary">delete</mat-icon></button> </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+  </mat-card-content>
+</mat-card>
