première version de fond en aliceblue + rooting + premiere version de message

--- a/frontend/src/app/components/house-card/house-card.component.css
+++ b/frontend/src/app/components/house-card/house-card.component.css
@@ -1,9 +1,13 @@
+* {
+  background-color: aliceblue;
+}
+
 .example-card {
     max-width: 70%;
     justify-content: center;
     margin-bottom: 15px;
   }
-  
+
   .example-header-image {
     background-image: url('src\app\assets\user.png');
     background-size: cover;
