--- a/frontend/src/app/components/message/message.component.html
+++ b/frontend/src/app/components/message/message.component.html
@@ -1,8 +1,10 @@
 <body>
 
+<div class="flex-container">
+
 <div class="contacts">
   <mat-list>
-    <mat-list-item>John Smith</mat-list-item>
+    <mat-list-item>{{nomPers}}</mat-list-item>
     <mat-divider></mat-divider>
     <mat-list-item>Ivan Dupont</mat-list-item>
     <mat-divider></mat-divider>
@@ -10,7 +12,13 @@
   </mat-list>
 </div>
 
-<div clas="messages">
+<div class="messages">
+  <p>{{msgPers}}</p>
+  <input class="textarea" type="text" placeholder="Type here!"/>
 </div>
+
+</div>
+
+
 
 </body>
