bouton modifiés sur la page d'accueil

--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -1,3 +1,5 @@
+<body>
+
 <mat-card >
   <mat-card-header>
     <mat-card-title>Login</mat-card-title>
@@ -29,3 +31,4 @@
   </mat-card-content>
 </mat-card>
 
+</body>
