add backoffice criterias

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -41,9 +41,9 @@
       <mat-icon>location_city</mat-icon>
       <span>Houses</span>
     </button>
-    <button mat-menu-item  *ngIf="role == 'ADMIN'" (click)="toAddCriteria()">
+    <button mat-menu-item  *ngIf="role == 'ADMIN'" (click)="toCriterias()">
       <mat-icon>library_add</mat-icon>
-      <span>Add criteria</span>
+      <span>Criterias</span>
     </button>
     <button mat-menu-item (click)="toLogout()">
       <mat-icon>exit_to_app</mat-icon>
