--- a/frontend/src/app/components/house-card/house-card.component.css
+++ b/frontend/src/app/components/house-card/house-card.component.css
@@ -2,6 +2,8 @@
     max-width: 70%;
     justify-content: center;
     margin-bottom: 15px;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .example-header-image {
