--- a/frontend/src/app/components/house-card/house-card.component.html
+++ b/frontend/src/app/components/house-card/house-card.component.html
@@ -16,7 +16,7 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>See more</button>
+      <button mat-button (click)="toHouse(house.idhouse)">See more</button>
       <!-- <button mat-button>SHARE</button> -->
     </mat-card-actions>
   </mat-card>
