--- a/frontend/src/app/components/recherche-form/recherche-form.component.html
+++ b/frontend/src/app/components/recherche-form/recherche-form.component.html
@@ -4,26 +4,26 @@
   </mat-card-header>
   <mat-card-content>
     <form class="example-form" #searchForm="ngForm" (ngSubmit)="search(searchForm)">
-      <table>
-        <th>
+      <!-- <table>
+        <th> -->
           <mat-form-field appearance="fill" class="example-full-width">
             <mat-label>City</mat-label>
             <input matInput [(ngModel)]="city" name="city">
           </mat-form-field>
-        </th>
+        <!-- </th> -->
         <!-- <th>
           <mat-form-field appearance="fill" class="example-full-width">
             <mat-label>Date</mat-label>
             <input matInput [(ngModel)]="date" name="date" type="date">
           </mat-form-field>
         </th> -->
-        <th>
+        <!-- <th> -->
           <mat-form-field appearance="fill" class="example-full-width">
-            <mat-label>Nb of room</mat-label>
+            <mat-label>Nb of rooms</mat-label>
             <input matInput type="number" [(ngModel)]="bedrooms" name="bedrooms" min="1">
           </mat-form-field>
-        </th>
-        <th>
+        <!-- </th>
+        <th> -->
           <!-- <mat-form-field appearance="fill" class="example-full-width">
             <mat-label>Category</mat-label>
             <input matInput [(ngModel)]="category" name="category">
@@ -37,12 +37,12 @@
             </mat-select>
           </mat-form-field>
 
-        <th>
+        <!-- <th> -->
           <button mat-raised-button type="submit" color="primary" click="getHouseSearch">
             <mat-icon>search</mat-icon>
           </button>
-        </th>
-      </table>
+        <!-- </th>
+      </table> -->
     </form>
   </mat-card-content>
 </mat-card>
