--- a/frontend/src/app/footer/footer.component.css
+++ b/frontend/src/app/footer/footer.component.css
@@ -1,8 +1,9 @@
 * {
   bottom: 0;
   width: 100%;
-  height: 50px;
+  height: 2.5rem;
   background-color: #393939;
+  position: fixed;
 }
 
 .text {
