--- a/frontend/src/app/components/recherche-form/recherche-form.component.html
+++ b/frontend/src/app/components/recherche-form/recherche-form.component.html
@@ -7,7 +7,7 @@
       <table>
         <th>
           <mat-form-field appearance="fill" class="example-full-width">
-            <mat-label>City</mat-label>
+            <mat-label>City</mat-label>mat
             <input matInput [(ngModel)]="city" name="city">
           </mat-form-field>
         </th>
