--- a/frontend/src/app/components/affichage-maison/affichage-maison.component.html
+++ b/frontend/src/app/components/affichage-maison/affichage-maison.component.html
@@ -37,7 +37,7 @@
         </mat-card>
       </th>
     </table>
-    <button mat-raised-button type="button">RESERVER</button>
+    <button mat-raised-button type="button" (click)="openDialog()">RESERVER</button>
   </mat-card-content>
 
 </mat-card>
